--- a/styles/base.css
+++ b/styles/base.css
@@ -65,7 +65,7 @@ figcaption {
     font-style: italic;
     color: #777;
     font-size: 14px;
-    margin-left: 30px;
+    margin-left: 38px;
 }
 
 main {
@@ -91,7 +91,7 @@ main {
 }
 
 .card1 {
-    width: 380px;
+    width: 360px;
     margin-left: 20px;
 }
 
@@ -180,7 +180,7 @@ aside p {
     text-decoration: underline;
 }
 
-footer, script {
+footer {
     margin-top: 10px;
     height: 60px;
     text-align: center;
