--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -38,13 +38,13 @@
     .hero {
         height: 800px;
         max-width: 100%;
-        position: relative; /* Ensure positioned children are relative to this */
+        position: relative; 
     }
 
     .data, .weather {
         display: flex;
         flex-direction: column;
-        align-items: flex-start; /* Align items to the start */
+        align-items: flex-start; 
         text-align: left; 
         background-color: rgba(247, 246, 246, 0.651);
         padding: 20px;
@@ -60,7 +60,7 @@
     }
 
     .weather {
-        bottom: -200px; 
+        bottom: -100px; 
         right: 20px;
     }
 
@@ -69,21 +69,21 @@
         font-size: 3rem; 
         position: absolute;
         top: -20px; 
-        right: 30%;
+        right: 25%;
         transform: translateX(50%);
     }
 
     h2 {
         margin: 0;
         padding-left: 20px;
-        padding-right: 100px;
+        padding-right: 70px;
         padding-bottom: 15px;
         padding-top: 15px;
         background-color: var(--accent1-color);
         color: #1f1e1e;
         text-align: left;
         position: absolute;
-        top: -15px; /* Adjust to overlap the white box */
+        top: -15px; 
         left: -20px;
         box-sizing: border-box;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); 
@@ -95,7 +95,7 @@
         grid-template-columns: 1fr 1fr; 
         gap: 10px; 
         width: 100%;
-        margin-top: 40px; /* Adjust for spacing below overlapping header */
+        margin-top: 40px; 
     }
 
     .label {
