--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -64,7 +64,7 @@
         right: 20px;
     }
 
-    .weather::before {
+    .weather::after {
         content: "🌦️"; 
         font-size: 3rem; 
         position: absolute;
