--- a/styles/form.css
+++ b/styles/form.css
@@ -28,7 +28,8 @@ header {
 
 .wf1 label {
     display: block;
-    padding-top: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 4px;
     font-size: 1rem;
     color: var(--primary-color);
 }
@@ -50,13 +51,13 @@ textarea
     padding: .75rem;
     color: #555;
     width: 100%;
-    max-width: 400px;
+    max-width: 200px;
     appearance: none;
 }
 
 .wf1 input[type="radio"]
 {
-    margin-right:5px;
+    margin-right: 15px;
 }
 
 .wf1 input[type="submit"] {
